# GSF-FIGHTER

./: README.md
MobileApp/: pubspec.yaml
MobileApp/android/app/src/main/: AndroidManifest.xml
MobileApp/android/app/src/main/res/xml/: network_security_config.xml
MobileApp/ios/Runner/: Info.plist
MobileApp/lib/: main.dart
MobileApp/lib/audio/: audio_engine.dart
MobileApp/lib/core/: app_state.dart  gsf_protocol.dart
MobileApp/lib/network/: discovery_client.dart  stream_client.dart
MobileApp/lib/ui/animations/: fight_overlay.dart
MobileApp/lib/ui/screens/: home_screen.dart  listening_screen.dart  preset_select_screen.dart
MobileApp/lib/ui/theme/: gsf_theme.dart
MobileApp/lib/ui/widgets/: arcade_button.dart  connection_code_input.dart  health_bar.dart  scanline_overlay.dart  widgets.dart
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Source/ArcadeUI/: ArcadeButton.cpp  ArcadeButton.h  ConnectionPanel.cpp  ConnectionPanel.h  FightScreen.cpp  FightScreen.h  GSFLookAndFeel.cpp  GSFLookAndFeel.h  HealthBarMeter.cpp  HealthBarMeter.h  PresetPanel.cpp  PresetPanel.h
Plugin/Source/Network/: ClientSession.cpp  ClientSession.h  DeviceDiscovery.cpp  DeviceDiscovery.h  StreamServer.cpp  StreamServer.h
Plugin/Source/Presets/: TranslationEngine.cpp  TranslationEngine.h
Shared/: GSFProtocol.h
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/privacy/: page.tsx
website/src/app/support/: page.tsx
website/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Presets.tsx  TechSpecs.tsx
